Fix recipe item type predicate